# MyJNIDemo

./: .gitignore  CMakeLists.txt  cp.bat  library.cpp  library.h
headers/: com_jiangli_jni_myjni_MyJNIDemo.h
